# goit-pythonweb-hw-06

./: README.md  connectdb.py  models.py  my_select.py  pyproject.toml  seeds.py
migrations/: env.py
migrations/versions/: c5c3480cae0e_add_description_to_notes.py
